--- a/app/client/playlistWork.html
+++ b/app/client/playlistWork.html
@@ -6,7 +6,7 @@
   <style>
     body{
     /*background-color: grey;*/
-    background-image: url("images/224700.jpg");
+    background-image: url("images/jo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
