Revert "new ui"

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -9,7 +9,7 @@
     <style>
       body {
         /*background-color: grey;*/
-        background-image: url("images/jo.jpg");
+        background-image: url("images/224700.jpg");
 
       }
     </style>
@@ -21,7 +21,7 @@
 
 
     <div class="sign">
- <img src="images/t.gif" alt="t"></img>
+ <img src="images/wave.gif" alt="wave"></img>
  <div class="centered">
    <h1>Sleepify</h1>
 
