--- a/app/client/account.html
+++ b/app/client/account.html
@@ -9,7 +9,7 @@
     <style>
       body {
         /*background-color: grey;*/
-        background-image: url("images/jo.jpg");
+        background-image: url("images/224700.jpg");
         color: white;
       }
       #title {
