--- a/app/client/signup.html
+++ b/app/client/signup.html
@@ -9,7 +9,7 @@
     <style>
       body {
         /*background-color: grey;*/
-        background-image: url("images/jo.jpg");
+        background-image: url("images/224700.jpg");
 
       }
     </style>
@@ -21,7 +21,7 @@
 
 
     <div class="sign">
- <img src="images/fluff.gif" alt="fluff"></img>
+ <img src="images/wave.gif" alt="wave"></img>
  <div class="centered">
    <h1>Sleepify</h1>
    <form id="signup_form" action="/signUp" method="POST"> 
