ambiance and frequency

--- a/app/client/campfire.html
+++ b/app/client/campfire.html
@@ -37,7 +37,26 @@
         allowtransparency="true"
         allow="encrypted-media"
       ></iframe>
+      <br /><br />
+      <br /><br />
+      <br /><br />
+      <br /><br />
+      <center>
+        <video id="campfireFreq" width="400" height="200" autoplay="autoplay">
+          <source src="images/campfireFreq.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </center>
+
+      <button id="canvasButton1" onclick="freq()">
+        View Ambiance / Frequency
+      </button>
     </center>
+    <br /><br />
+    <script
+      type="text/javascript"
+      src="https://static.codehs.com/gulp/80550f5fc4071985bfef352d04f005ca3de931d3/chs-js-lib/chs.js"
+    ></script>
     <script src="./javascript/script.js"></script>
     <!-- <div>
        <a
@@ -63,5 +82,6 @@
       document.getElementById("demo").innerHTML = code;
     </script>
   </div> -->
+    <script src="https://cdn.jsdelivr.net/gh/PiethonCoder/wave.js/wave.js"></script>
   </body>
 </html>
