--- a/app/client/index.html
+++ b/app/client/index.html
@@ -29,7 +29,7 @@
     <input type="text" placeholder="Email Address" name="uname" required><br>
     <input type="password" placeholder="Enter Password" name="psw" required>
         <br>
-    <button id="login" type="submit">Login</button>
+    <button id="login" type="submit" onclick="location.href='/home'">Login</button>
     OR
     <button id="signup" onclick="location.href='/signup'" type="submit">Sign Up</button>
 
