--- a/app/client/rain.html
+++ b/app/client/rain.html
@@ -39,7 +39,26 @@
         allowtransparency="true"
         allow="encrypted-media"
       ></iframe>
+
+      <canvas
+        width="400"
+        height="500"
+        id="canvas1"
+        class="codehs-editor-canvas"
+      ></canvas>
+      <pre id="console"></pre>
+
+      <button id="canvasButton" onclick="start()">
+        View Ambiance / Frequency
+      </button>
     </center>
+    <br /><br />
+    <script
+      type="text/javascript"
+      src="https://static.codehs.com/gulp/80550f5fc4071985bfef352d04f005ca3de931d3/chs-js-lib/chs.js"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PiethonCoder/wave.js/wave.js"></script>
     <script src="./javascript/script.js"></script>
     <!-- <div>
        <a
