--- a/app/client/seaStorm.html
+++ b/app/client/seaStorm.html
@@ -38,7 +38,24 @@
         allowtransparency="true"
         allow="encrypted-media"
       ></iframe>
+
+      <canvas
+        width="400"
+        height="500"
+        id="canvas1"
+        class="codehs-editor-canvas"
+      ></canvas>
+      <pre id="console"></pre>
+
+      <button id="canvasButton" onclick="start()">
+        View Ambiance / Frequency
+      </button>
     </center>
+    <br /><br />
+    <script
+      type="text/javascript"
+      src="https://static.codehs.com/gulp/80550f5fc4071985bfef352d04f005ca3de931d3/chs-js-lib/chs.js"
+    ></script>
     <script src="./javascript/script.js"></script>
     <!-- <div>
        <a
@@ -64,5 +81,6 @@
       document.getElementById("demo").innerHTML = code;
     </script>
   </div> -->
+    <script src="https://cdn.jsdelivr.net/gh/PiethonCoder/wave.js/wave.js"></script>
   </body>
 </html>
