--- a/app/client/account.html
+++ b/app/client/account.html
@@ -10,7 +10,6 @@
       body {
         /*background-color: grey;*/
         background-image: url("images/224700.jpg");
-        color: white;
       }
       #title {
         color: white;
@@ -37,15 +36,17 @@
     <br /><br /><br /><br /><br /><br />
     <h1 id="title">Welcome to Sleepify <u>user1</u></h1>
     <br /><br /><br /><br /><br />
-    <div id="account">
-      <h1>Account Information:</h1>
+    <center>
+      <div id="account">
+        <h1>Account Information:</h1>
 
-      <h2>UserName: <u>user1</u></h2>
-      <h2>Email: <u>user1@gmail.com</u></h2>
-      <br /><br /><br /><br /><br />
-      <h1>Password:</h1>
-      <h2>Change Password: <button id="change">Change Password</button></h2>
-    </div>
+        <h2>UserName: <u>user1</u></h2>
+        <h2>Email: <u>user1@gmail.com</u></h2>
+        <br /><br /><br /><br /><br />
+        <h1>Password:</h1>
+        <h2>Change Password: <button id="change">Change Password</button></h2>
+      </div>
+    </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="./javascript/script.js"></script>
